avioncito z-index and link fixed

--- a/css/styles-custom.css
+++ b/css/styles-custom.css
@@ -920,6 +920,8 @@
   padding-left: 1rem;
 }
 .btn-ser-parte {
+  position: relative;
+  z-index: 100;
   margin-top: 4em;
   transition: ease-in-out 0.3s;
 }
@@ -1735,6 +1737,14 @@
     filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.25));
 }
 }
+@media screen and (max-width: 1200px) {
+  .fotoObjetivo {
+    width: 37.8%;
+    display: block;
+    position: absolute;
+    filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.25));
+  }
+}
 @media screen and (max-width: 1100px) {
   
   .fotoEnlazar {
@@ -2421,7 +2431,7 @@ padding-right: 6rem;
   color: var(--blanco);
   padding: 0 1rem;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 19px;
   text-align: center;
 }
 .serviciosTitulo {
@@ -2557,13 +2567,21 @@ padding-right: 6rem;
   background-repeat: repeat;
   background-size: auto;
   background-position: top center;
-  background-size: 400px;
+  background-size: 300px;
   background-repeat: no-repeat;
   height: 20vh !important;
   justify-items: center;
   background-color: white;
   
 
+}
+.header-title2 {
+  color: #34668a;
+  font-size: 20px;
+  text-align: center;
+  display: block;
+  align-self: flex-start;
+  padding-top: 50px;
 }
 .form-consulta {
   width: 85% !important;
@@ -2674,6 +2692,13 @@ padding-right: 6rem;
   filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.25));
   display: block;
 }
+.header-title {
+  color: var(--blanco);
+  padding: 0 1rem;
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+}
 .btn-cargar-cv {
   padding: 0 2rem !important;
   transition: ease-in-out 0.2s;
@@ -2689,7 +2714,7 @@ padding-right: 6rem;
   background-repeat: repeat;
   background-size: auto;
   background-position: top center;
-  background-size: 300px;
+  background-size: 250px;
   background-repeat: no-repeat;
   height: 20vh !important;
   justify-items: center;
@@ -2714,7 +2739,7 @@ padding-right: 6rem;
   border-radius: 100px;
   padding: 0.5rem 2rem;
   transition: ease-in-out 0.2s;
-  width: 200px;
+  width: 250px;
   
 }
 }
@@ -2756,7 +2781,7 @@ padding-right: 6rem;
   border-radius: 100px;
   padding: 0.5rem 2rem;
   transition: ease-in-out 0.2s;
-  width: 200px;
+  width: 250px;
   
 }
 .header-title {
@@ -2825,9 +2850,16 @@ padding-right: 6rem;
     border-radius: 100px;
     padding: 0.5rem 2rem;
     transition: ease-in-out 0.2s;
-    width: 200px;
+    width: 250px;
     
   }
+  .header-title {
+    color: var(--blanco);
+    padding: 0 1rem;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+}
   
 .header-title1 {
   color: white;
@@ -2922,7 +2954,7 @@ padding-right: 6rem;
   border-radius: 100px;
   padding: 0.5rem 2rem;
   transition: ease-in-out 0.2s;
-  width: 200px;
+  width: 250px;
   
 }
 .btn-cargar-cv {
@@ -2986,7 +3018,7 @@ padding-right: 6rem;
   border-radius: 100px;
   padding: 0.5rem 2rem;
   transition: ease-in-out 0.2s;
-  width: 200px;
+  width: 250px;
  
 }
 .buttonAprende1 {
@@ -3019,7 +3051,7 @@ padding-right: 6rem;
   color: var(--blanco);
   padding: 0 1rem;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 13px;
   text-align: center;
 }
 .serviciosTitulo {
@@ -3110,7 +3142,7 @@ padding-right: 6rem;
   border-radius: 100px;
   padding: 0.5rem 2rem;
   transition: ease-in-out 0.2s;
-  width: 200px;
+  width: 250px;
   
 }
 .somosEnlazar {
